[package]
name = "cipher_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dotenv = "0.15.0"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
seahorse = "2.1.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.105"
